		
	Fixed replication of ontology attributes when creating a new version:
		- Server.createOntology(CreateOntologyInfo): newOntModel.removeAll(ont_, prd, null) is called when
		  there is a new value for the corresponding property.
		  TODO Note: We are always replacing the values; we may eventually consider a mechanism to allow 
		  actual *addition" of more values for the same predicate.
	
2008-08-07:
	- Checking pre-existing registered ontology when trying to submit a new one:
		Util2.checkNoPreexistingOntology(String possibleOntologyUri, BaseResult result)
		Server.createOntology(CreateOntologyInfo createOntologyInfo)
		OntServiceUtil.isRegisteredOntologyUri(String uriModel, String... acceptEntries)
		Util2.checkNoPreexistingOntology(String possibleOntologyUri, BaseResult result)
	
	
2000-08-03:   1.5.0.alpha4
	- Server.createOntology(CreateOntologyInfo): Do NOT remove "original OWL.Ontology individual"
	  if where are in re-hosting mode (createOntologyResult.isPreserveOriginalBaseNamespace).
	  If we did this on a model with the same original namespace, we would remove the owl:Ontology 
	  entry altogether and get an "rdf:Description" instead.
	  
	- Having weird RPC-related error "connection refused", which seems a GWT problem:
	  the asynchronous call registerOntology(CreateOntologyResult, LoginResult) on the client
	  does not get called to the server side.
	  
	  Fixed: Config.Prop.BIOPORTAL_REST_URL was not appropriately initialized from Server.
	  The default value (localhost based) caused the "connection refused".  This was very hard
	  to detect as the log info in the server was not showing anything!
	
	
	
2000-08-01,03:   1.5.0.alpha3 (was 1.5.0.alpha2)
	Server.getInstance(String ontServiceUrl, String bioportalRestUrl): now with parameters indicating
	the "Ont" service URL and the BioPortal REST base URL (these were previously hard-coded).
		- Config: added corresponding attributes